--- a/src/TLY.ShortUrl.csproj
+++ b/src/TLY.ShortUrl.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>netstandard2.1</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <Title>A .NET library for creating shortened URLs using the T.ly URL shortening service.</Title>
