--- a/src/TLY.ShortUrl/TLY.ShortUrl.csproj
+++ b/src/TLY.ShortUrl/TLY.ShortUrl.csproj
@@ -2,7 +2,6 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <Title>A .NET library for creating shortened URLs using the T.ly URL shortening service.</Title>
     <PackageReadmeFile>README.md</PackageReadmeFile>
@@ -19,11 +18,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Include="..\LICENSE.txt">
+    <None Include="..\..\LICENSE.txt">
       <Pack>True</Pack>
       <PackagePath>\</PackagePath>
     </None>
-    <None Include="..\README.md">
+    <None Include="..\..\README.md">
       <Pack>True</Pack>
       <PackagePath>\</PackagePath>
     </None>
